src/snapshots/pyc_editor__cfg__test__simple_to_ext_instructions.snap
---
source: src/cfg.rs
expression: cfg
---
ControlFlowGraph {
    blocks: [
        NormalBlock(
            NormalBlock {
                instructions: [
                    LoadConst(
                        ConstIndex {
                            index: 256,
                        },
                    ),
                    LoadConst(
                        ConstIndex {
                            index: 1,
                        },
                    ),
                    CompareOp(
                        Smaller,
                    ),
                ],
                branch_block: Edge(
                    BranchEdge {
                        reason: Opcode(
                            POP_JUMP_FORWARD_IF_TRUE,
                        ),
                        block_index: Index(
                            1,
                        ),
                    },
                ),
                default_block: Edge(
                    BranchEdge {
                        reason: Opcode(
                            POP_JUMP_FORWARD_IF_TRUE,
                        ),
                        block_index: Index(
                            2,
                        ),
                    },
                ),
            },
        ),
        NormalBlock(
            NormalBlock {
                instructions: [
                    LoadConst(
                        ConstIndex {
                            index: 3,
                        },
                    ),
                    ReturnValue(
                        UnusedArgument(
                            0,
                        ),
                    ),
                ],
                branch_block: NoIndex,
                default_block: NoIndex,
            },
        ),
        NormalBlock(
            NormalBlock {
                instructions: [
                    LoadConst(
                        ConstIndex {
                            index: 2,
                        },
                    ),
                    ReturnValue(
                        UnusedArgument(
                            0,
                        ),
                    ),
                ],
                branch_block: NoIndex,
                default_block: NoIndex,
            },
        ),
    ],
    start_index: Fallthrough(
        Index(
            0,
        ),
    ),
}
