src/snapshots/pyc_editor__cfg__test__simple_to_ext_instructions_ext_on_jump.snap
---
source: src/cfg.rs
expression: cfg
---
ControlFlowGraph {
    blocks: [
        NormalBlock(
            NormalBlock {
                instructions: [
                    LoadConst(
                        ConstIndex {
                            index: 0,
                        },
                    ),
                    LoadConst(
                        ConstIndex {
                            index: 1,
                        },
                    ),
                    CompareOp(
                        Smaller,
                    ),
                ],
                branch_block: Edge(
                    BranchEdge {
                        reason: Opcode(
                            POP_JUMP_FORWARD_IF_TRUE,
                        ),
                        block_index: InvalidIndex(
                            258,
                        ),
                    },
                ),
                default_block: Edge(
                    BranchEdge {
                        reason: Opcode(
                            POP_JUMP_FORWARD_IF_TRUE,
                        ),
                        block_index: Index(
                            1,
                        ),
                    },
                ),
            },
        ),
        NormalBlock(
            NormalBlock {
                instructions: [
                    LoadConst(
                        ConstIndex {
                            index: 2,
                        },
                    ),
                    ReturnValue(
                        UnusedArgument(
                            0,
                        ),
                    ),
                ],
                branch_block: NoIndex,
                default_block: NoIndex,
            },
        ),
    ],
    start_index: Fallthrough(
        Index(
            0,
        ),
    ),
}
